--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <navbar class="header" id="header">
     <div id="logo">
       <a href="#"><div id=""></div></a>
-      <p>FrameWork</p>
+      <h1>FrameWork</h1>
     </div>
 
     <nav class="nav-bar">
